--- a/dogs.css
+++ b/dogs.css
@@ -46,8 +46,12 @@ h1{
     background-color:#21bc26;
 }
 
-image{
-    width: 100%;
-    height: 100%;
-    margin-left: 50%;
+img{
+    width: 40%;
+    height: 60%;
+    margin-left: 30%;
+    border-color:#131312;
+    border-radius:2em;
+    border-style: solid;
+    border-width: 5px;
 }
